--- a/superior-shepherd/superior-shepherd/src/pages/about.astro
+++ b/superior-shepherd/superior-shepherd/src/pages/about.astro
@@ -11,6 +11,7 @@ import Card from "../components/Card.astro";
         <a href="/">首页</a>
         <a href="/about/">关于</a>
         <a href="/blog/">博客</a>
+        <a href="/notes/">笔记</a>
     </main>
     <h1>关于我 <span class="text-gradient">Astro</span></h1>
 </Layout>
@@ -52,7 +53,7 @@ import Card from "../components/Card.astro";
         text-align: center;
     }
 
-    .text-gradient {
+    h3.text-gradient {
         background-image: var(--accent-gradient);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
