--- a/superior-shepherd/superior-shepherd/src/pages/blog.astro
+++ b/superior-shepherd/superior-shepherd/src/pages/blog.astro
@@ -6,11 +6,12 @@ import Card from "../components/Card.astro";
 <Layout title="欢迎来到Astro">
     <main>
         <svg> </svg>
-        <h1>关于我</h1>
-        <p>在这个页面，我将展示有关我的博客。</p>
+        <h1>网络日志</h1>
+        <p>在这个页面，我将展示有关我的博客内容。</p>
         <a href="/">首页</a>
         <a href="/about/">关于</a>
         <a href="/blog/">博客</a>
+        <a href="/notes/">笔记</a>
     </main>
     <h1>关于我 <span class="text-gradient">Astro</span></h1>
 </Layout>
