--- a/superior-shepherd/superior-shepherd/src/pages/index.astro
+++ b/superior-shepherd/superior-shepherd/src/pages/index.astro
@@ -5,11 +5,12 @@ import Card from "../components/Card.astro";
 
 <Layout title="欢迎来到Astro">
 	<main>
-		<nav>
+		<svg>
 			<a href="/">首页</a>
 			<a href="/about/">关于</a>
 			<a href="/blog/">博客</a>
-		</nav>
+			<a href="/notes/">笔记</a>
+		</svg>
 		<h1>欢迎来到 <span class="text-gradient">Astro</span></h1>
 		<h2>P211012582<span class="text-gradient">马丽</span></h2>
 		<p class="instructions">
