--- a/src/pages/note.astro
+++ b/src/pages/note.astro
@@ -15,7 +15,7 @@ import Card from "../components/Card.astro";
         <h2>Astro的安装及部署</h2>
         <p>在这个页面，我将展示有关我的网络编辑课的课堂笔记</p>
         <ul>
-            <li><a href="\md\1\">Astro的安装及部署</a></li>
+            <li><a href='\md\1\"'>Astro的安装及部署</a></li>
             <li><a href="\md\2\">在Astro中创建页面及导航链接</a></li>
         </ul>
     </main>
