--- a/src/pages/notes.astro
+++ b/src/pages/notes.astro
@@ -5,18 +5,19 @@ import Card from "../components/Card.astro";
 
 <Layout title="欢迎来到Astro">
     <main>
-        <svg> </svg>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
-        <a href="/notes/">Notes</a>
+        <svg>
+            <a href="/">Home</a>
+            <a href="/about/">About</a>
+            <a href="/blog/">Blog</a>
+            <a href="/notes/">Notes</a>
+        </svg>
         <h1>课堂笔记</h1>
         <h2>P211012582<span class="text-gradient">马丽</span></h2>
         <h2>Astro的安装及部署</h2>
         <p>在这个页面，我将展示有关我的网络编辑课的课堂笔记</p>
         <ul>
-            <li><a href='\md\1\"'>Astro的安装及部署</a></li>
-            <li><a href="\md\2\">在Astro中创建页面及导航链接</a></li>
+            <li><a href="md\1\">Astro的安装及部署</a></li>
+            <li><a href="md\2\">在Astro中创建页面及导航链接</a></li>
         </ul>
     </main>
 </Layout>
