--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,18 +3,17 @@ import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 ---
 
-<Layout title="欢迎来到Astro">
+<Layout title="欢迎来到Astro.">
     <main>
-        <svg>
-            <a href="/">Home</a>
-            <a href="/about/">About</a>
-            <a href="/blog/">Blog</a>
-            <a href="/notes/">Notes</a>
-        </svg>
+        <a href="/">Home</a>
+        <a href="/about/">About</a>
+        <a href="/blog/">Blog</a>
+        <a href="/notes/">Notes</a>
+
         <h1>关于我</h1>
         <p>在这个页面，我将展示有关我的一些信息。</p>
+       
     </main>
-    <h1>关于我 <span class="text-gradient">Astro</span></h1>
 </Layout>
 
 <style>
