--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,7 +10,7 @@ import Footerdiv from "../components/Footer.astro";
         
  <NavigationBar />
         <h1>关于我</h1>
-        <p>在这个页面，我将展示有关我的一些信息。</p>
+        <p>在这个页面，我将展示有关我的整理的考研资料</p>
        
     </main>
     <Footerdiv />
