--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -119,24 +119,24 @@ import Footerdiv from "../components/Footer.astro";
                     <ul role="list" class="link-card-grid">
                         <!-- 假设Card组件接受href, title, body属性 -->
                         <Card
-                            href="https://docs.astro.build/"
-                            title="Documentation"
-                            body="Learn how Astro works and explore the official API docs."
+                            href="https://yz.chsi.com.cn//"
+                            title="中国研究生招生信息网"
+                            body="看5个内容：考研资讯、近五年考研分数及趋势图、考研专业知识库、考研百科、考研院校库."
                         />
                         <Card
-                            href="https://astro.build/integrations/"
-                            title="Integrations"
-                            body="Supercharge your project with new frameworks and libraries."
+                            href="http://chinakaoyan.com//"
+                            title="中国考研网"
+                            body="查询各个院校详细的考研简章信息：导师信息、历年分数、就业方向指导、专业信息等."
                         />
                         <Card
-                            href="https://astro.build/themes/"
-                            title="Themes"
-                            body="Explore a galaxy of community-built starter themes."
+                            href="https://www.eol.cn//"
+                            title="中国教育在线"
+                            body="查看考研频道：备考篇、报考篇、录取篇、互动篇、工具篇。还有搜院校、查专业、找导师等功能."
                         />
                         <Card
-                            href="https://astro.build/chat/"
-                            title="Community"
-                            body="Come say hi to our amazing Discord community."
+                            href="http://www.kaoshidian.com/zhuanti/2016/zhentiln.html/"
+                            title="考研历年真题库"
+                            body="想查询往年真题，涵盖了历年政治、英语、数学和考研专业课真题."
                         />
                     </ul>
                 </div>
