马丽期末作业修改

--- a/src/pages/notes.astro
+++ b/src/pages/notes.astro
@@ -120,7 +120,7 @@ import Footerdiv from "../components/Footer.astro";
             <h2>考研笔记</h2>
             <p>在这个页面，我将展示有关我的25考研笔记整理笔记</p>
             <ul class="link-card-grid">
-                <li><a href="/md/3/">25马理论考研资料整理</a></li>
+                <li><a href="/md/3/">25马理论和考研英语资料整理</a></li>
             </ul>
         </main>
         <!-- 页脚组件 -->
